src/objects/ffbc__Usage__c.object
<CustomObject>
    <customHelpPage>ffbc__usagehelp</customHelpPage>
    <fields>
        <fullName>ffbc__BillingDocumentLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the billing document line item for which this usage information was billed.</description>
        <inlineHelpText>Lookup to the billing document line item for which this usage information was billed.</inlineHelpText>
        <label>Billing Document Line Item</label>
        <referenceTo>fferpcore__BillingDocumentLineItem__c</referenceTo>
        <relationshipLabel>Related Usage</relationshipLabel>
        <relationshipName>Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contract line item to which this usage information applies.</description>
        <inlineHelpText>Lookup to the contract line item to which this usage information applies.</inlineHelpText>
        <label>Contract Line Item</label>
        <referenceTo>ffbc__ContractLineItem__c</referenceTo>
        <relationshipLabel>Related Usage</relationshipLabel>
        <relationshipName>Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__Date__c</fullName>
        <description>Date to which this usage information applies.</description>
        <inlineHelpText>Date to which this usage information applies.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of units used.</description>
        <inlineHelpText>Number of units used.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__UnitOfMeasure__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the unit of measure in which this usage information is recorded.</description>
        <inlineHelpText>Lookup to the unit of measure in which this usage information is recorded.</inlineHelpText>
        <label>Unit of Measure</label>
        <referenceTo>ffbc__UnitOfMeasure__c</referenceTo>
        <relationshipLabel>Related Usage</relationshipLabel>
        <relationshipName>Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Usage</label>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ContractLineItem__c</columns>
        <columns>ffbc__BillingDocumentLineItem__c</columns>
        <columns>ffbc__Quantity__c</columns>
        <columns>ffbc__Date__c</columns>
        <columns>ffbc__UnitOfMeasure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>US{0000000000}</displayFormat>
        <label>Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>